Fix about section on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ a.active {
     padding: 0;
   }
   .about {
-    margin: 100 auto;
+    margin: 100px auto;
     min-width: 450px;
   }
 
